une meilleure introduction en français

--- a/js/locales/fr.json
+++ b/js/locales/fr.json
@@ -147,6 +147,6 @@
   "Le guide de voyage libre du monde entier que chacun peut améliorer.",
 
   "img.bi is a secure image hosting. Images are encrypted using AES-256 with random key in browser before upload.":
-  "img.bi est un h&eacute;bergement s&eacute;curis&eacute; pour les images. Les images sont crypt&eacute;es en utilisant AES-256 &agrave; cl&eacute; al&eacute;atoire, dans le navigateur, avant de les charger."
+  "img.bi est un hosting s&eacute;curis&eacute; pour les photos. Les images sont crypt&eacute;es en utilisant AES-256 &agrave; cl&eacute; impr&eacute;visible, dans le browser, avant de les envoyer."
 
 }
